完成底座和子应用demo的配置

--- a/项目搭建笔记/底座.md
+++ b/项目搭建笔记/底座.md
@@ -1,5 +1,7 @@
 参考：[微前端qiankun架构实战](https://juejin.cn/post/7262982840018665532#heading-9)
 
+参考: [微前端框架 之 qiankun](https://blog.csdn.net/fmk1023/article/details/114276311?spm=1001.2101.3001.6650.5&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-5-114276311-blog-128201778.235%5Ev43%5Epc_blog_bottom_relevance_base4&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-5-114276311-blog-128201778.235%5Ev43%5Epc_blog_bottom_relevance_base4&utm_relevant_index=9)
+
 # 底座项目
 ## 初始化项目
 用vue脚手架初始化项目：
